--- a/SpiderTracker/packages.config
+++ b/SpiderTracker/packages.config
@@ -5,11 +5,13 @@
   <package id="HtmlAgilityPack" version="1.7.2" targetFramework="net461" />
   <package id="Jurassic" version="2.2.2" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net461" />
+  <package id="MySqlConnector" version="1.2.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="NLog" version="4.4.12" targetFramework="net461" />
   <package id="Polly" version="5.8.0" targetFramework="net461" />
-  <package id="System.Data.SQLite" version="1.0.111.0" targetFramework="net461" />
-  <package id="System.Data.SQLite.Core" version="1.0.111.0" targetFramework="net461" />
-  <package id="System.Data.SQLite.EF6" version="1.0.111.0" targetFramework="net461" />
-  <package id="System.Data.SQLite.Linq" version="1.0.111.0" targetFramework="net461" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.0" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net461" />
 </packages>
