--- a/SpiderTracker/SpiderTracker.csproj
+++ b/SpiderTracker/SpiderTracker.csproj
@@ -167,10 +167,10 @@
     <Compile Include="UI\SinaLoginForm.Designer.cs">
       <DependentUpon>SinaLoginForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="UI\SpiderTrackerForm.cs">
+    <Compile Include="SpiderTrackerForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="UI\SpiderTrackerForm.Designer.cs">
+    <Compile Include="SpiderTrackerForm.Designer.cs">
       <DependentUpon>SpiderTrackerForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
@@ -196,7 +196,7 @@
     <EmbeddedResource Include="UI\SinaLoginForm.resx">
       <DependentUpon>SinaLoginForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UI\SpiderTrackerForm.resx">
+    <EmbeddedResource Include="SpiderTrackerForm.resx">
       <DependentUpon>SpiderTrackerForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
