--- a/SpiderTracker/SpiderTracker.csproj
+++ b/SpiderTracker/SpiderTracker.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Imp\MWeiboJson\MWeiboFocusResult.cs" />
     <Compile Include="Imp\MWeiboJson\MWeiboLoginData.cs" />
     <Compile Include="Imp\MWeiboJson\MWeiboLoginResult.cs" />
+    <Compile Include="Imp\MWeiboJson\MWeiboStatusMedia.cs" />
     <Compile Include="Imp\MWeiboJson\MWeiboUserData.cs" />
     <Compile Include="Imp\MWeiboJson\MWeiboUserResult.cs" />
     <Compile Include="Imp\Util\HttpUtil.cs" />
@@ -163,6 +164,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\VedioPlayerUC.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UI\VedioPlayerUC.Designer.cs">
+      <DependentUpon>VedioPlayerUC.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\ViewImgForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -190,6 +197,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="UI\VedioPlayerUC.resx">
+      <DependentUpon>VedioPlayerUC.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\ViewImgForm.resx">
       <DependentUpon>ViewImgForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -211,6 +221,43 @@
   <ItemGroup>
     <Content Include="logo.ico" />
     <Content Include="static\logo.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <COMReference Include="AxWMPLib">
+      <Guid>{6BF52A50-394A-11D3-B153-00C04F79FAA6}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>aximp</WrapperTool>
+      <Isolated>False</Isolated>
+    </COMReference>
+    <COMReference Include="MediaPlayer">
+      <Guid>{22D6F304-B0F6-11D0-94AB-0080C74C7E95}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
+    <COMReference Include="stdole">
+      <Guid>{00020430-0000-0000-C000-000000000046}</Guid>
+      <VersionMajor>2</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
+    <COMReference Include="WMPLib">
+      <Guid>{6BF52A50-394A-11D3-B153-00C04F79FAA6}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
