--- a/SpiderTracker/SpiderTracker.csproj
+++ b/SpiderTracker/SpiderTracker.csproj
@@ -131,6 +131,7 @@
     <Compile Include="Imp\MWeiboJson\MWeiboStatus.cs" />
     <Compile Include="Imp\MWeiboJson\MWeiboUser.cs" />
     <Compile Include="Imp\MWeiboSpiderService.cs" />
+    <Compile Include="Imp\Util\ObjectUtil.cs" />
     <Compile Include="Imp\Util\PathUtil.cs" />
     <Compile Include="Imp\Util\SinaUrlUtil.cs" />
     <Compile Include="Imp\SpiderCacheService.cs" />
