--- a/SpiderTracker/packages.config
+++ b/SpiderTracker/packages.config
@@ -2,17 +2,20 @@
 <packages>
   <package id="DotnetSpider.Core" version="2.4.8" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="Geckofx45" version="45.0.34" targetFramework="net461" />
+  <package id="geckofx-core" version="33.0.5.1" targetFramework="net461" />
+  <package id="geckofx-winforms" version="33.0.5.1" targetFramework="net461" />
   <package id="HtmlAgilityPack" version="1.7.2" targetFramework="net461" />
   <package id="Jurassic" version="2.2.2" targetFramework="net461" />
-  <package id="log4net" version="2.0.8" targetFramework="net461" />
+  <package id="log4net" version="2.0.12" targetFramework="net461" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net461" />
-  <package id="MySqlConnector" version="1.2.1" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="MySqlConnector" version="1.3.2" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net461" />
   <package id="NLog" version="4.4.12" targetFramework="net461" />
   <package id="Polly" version="5.8.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
   <package id="System.Memory" version="4.5.4" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net461" />
-  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net461" />
 </packages>
