--- a/SpiderTracker/SpiderTracker.csproj
+++ b/SpiderTracker/SpiderTracker.csproj
@@ -69,12 +69,6 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
-    <Reference Include="Geckofx-Core, Version=45.0.34.0, Culture=neutral, PublicKeyToken=3209ac31600d1857, processorArchitecture=x86">
-      <HintPath>..\packages\Geckofx45.45.0.34\lib\net45\Geckofx-Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Geckofx-Winforms, Version=45.0.34.0, Culture=neutral, PublicKeyToken=3209ac31600d1857, processorArchitecture=x86">
-      <HintPath>..\packages\Geckofx45.45.0.34\lib\net45\Geckofx-Winforms.dll</HintPath>
-    </Reference>
     <Reference Include="HtmlAgilityPack, Version=1.7.2.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
       <HintPath>..\packages\HtmlAgilityPack.1.7.2\lib\Net45\HtmlAgilityPack.dll</HintPath>
     </Reference>
@@ -148,6 +142,10 @@
     <Compile Include="Imp\MWeiboJson\MWeiboLoginData.cs" />
     <Compile Include="Imp\MWeiboJson\MWeiboLoginResult.cs" />
     <Compile Include="Imp\MWeiboJson\MWeiboStatusMedia.cs" />
+    <Compile Include="Imp\MWeiboJson\MWeiboTopicCard.cs" />
+    <Compile Include="Imp\MWeiboJson\MWeiboTopicData.cs" />
+    <Compile Include="Imp\MWeiboJson\MWeiboTopicResult.cs" />
+    <Compile Include="Imp\MWeiboJson\MWeiboTopic.cs" />
     <Compile Include="Imp\MWeiboJson\MWeiboSuper.cs" />
     <Compile Include="Imp\MWeiboJson\MWeiboSuperCardGroup.cs" />
     <Compile Include="Imp\MWeiboJson\MWeiboSuperCard.cs" />
@@ -167,6 +165,7 @@
     <Compile Include="Imp\MWeiboJson\MWeiboStatus.cs" />
     <Compile Include="Imp\MWeiboJson\MWeiboUser.cs" />
     <Compile Include="Imp\MWeiboSpiderService.cs" />
+    <Compile Include="Imp\Util\LogUtil.cs" />
     <Compile Include="Imp\Util\ObjectUtil.cs" />
     <Compile Include="Imp\Util\PathUtil.cs" />
     <Compile Include="Imp\Util\SinaUrlUtil.cs" />
@@ -248,7 +247,6 @@
     <EmbeddedResource Include="UI\WebBrowerUC.resx">
       <DependentUpon>WebBrowerUC.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="Firefox\omni.ja" />
     <None Include="log4net.config" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -265,25 +263,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Firefox\AccessibleMarshal.dll" />
-    <Content Include="Firefox\breakpadinjector.dll" />
-    <Content Include="Firefox\d3dcompiler_47.dll" />
-    <Content Include="Firefox\freebl3.dll" />
-    <Content Include="Firefox\icudt58.dll" />
-    <Content Include="Firefox\icuin58.dll" />
-    <Content Include="Firefox\icuuc58.dll" />
-    <Content Include="Firefox\lgpllibs.dll" />
-    <Content Include="Firefox\libEGL.dll" />
-    <Content Include="Firefox\libGLESv2.dll" />
-    <Content Include="Firefox\mozglue.dll" />
-    <Content Include="Firefox\nss3.dll" />
-    <Content Include="Firefox\nssckbi.dll" />
-    <Content Include="Firefox\nssdbm3.dll" />
-    <Content Include="Firefox\plugin-container.exe" />
-    <Content Include="Firefox\plugin-hang-ui.exe" />
-    <Content Include="Firefox\sandboxbroker.dll" />
-    <Content Include="Firefox\softokn3.dll" />
-    <Content Include="Firefox\xul.dll" />
     <Content Include="logo.ico" />
     <Content Include="static\logo.ico" />
   </ItemGroup>
@@ -342,11 +321,4 @@
     </COMReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\Geckofx45.45.0.34\build\Geckofx45.targets" Condition="Exists('..\packages\Geckofx45.45.0.34\build\Geckofx45.targets')" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>这台计算机上缺少此项目引用的 NuGet 程序包。使用“NuGet 程序包还原”可下载这些程序包。有关更多信息，请参见 http://go.microsoft.com/fwlink/?LinkID=322105。缺少的文件是 {0}。</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Geckofx45.45.0.34\build\Geckofx45.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Geckofx45.45.0.34\build\Geckofx45.targets'))" />
-  </Target>
 </Project>
