--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 /SpiderTracker/obj/Debug
 /SpiderTracker/bin/Release
 /SpiderTracker/obj/Release
-/SpiderTracker/bin
+/SpiderTracker/obj
 /SpiderTracker/obj/x64/Debug
 /SpiderWeb/bin
 /SpiderWeb/obj
