--- a/SpiderBilibiliTracker/SpiderBilibiliTracker.csproj
+++ b/SpiderBilibiliTracker/SpiderBilibiliTracker.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{18C5BF99-6441-471E-B31A-A8D4FF7D0DA9}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>SpiderTracker</RootNamespace>
-    <AssemblyName>SpiderTracker</AssemblyName>
+    <AssemblyName>SpiderBilibiliTracker</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
