--- a/SpiderCore/SpiderCore.csproj
+++ b/SpiderCore/SpiderCore.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Model\BilibiliJson\BilibiliUser.cs" />
     <Compile Include="Model\BilibiliJson\BilibiliUserLiveroom.cs" />
     <Compile Include="Model\BilibiliJson\BilibiliUserResult.cs" />
+    <Compile Include="Model\BilibiliJson\BilibiliUserStatusPage.cs" />
     <Compile Include="Model\BilibiliJson\BilibiliUserViedoAudio.cs" />
     <Compile Include="Model\BilibiliJson\BilibiliUserViedoInfo.cs" />
     <Compile Include="Model\BilibiliJson\BilibiliUserViedoDash.cs" />
