--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,7 @@
 /SpiderSinaTracker/obj
 /SpiderSinaTracker/bin
 /SpiderBilibiliTracker/cache/cosplay/StoreImage
+/SpiderDomain/bin
+/SpiderDomain/obj
+/SpiderService/bin
+/SpiderService/obj
