--- a/SpiderCoreV2/SpiderCoreV2.csproj
+++ b/SpiderCoreV2/SpiderCoreV2.csproj
@@ -6,14 +6,13 @@
 
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.7.2" />
-    <PackageReference Include="Jurassic" Version="2.2.2" />
     <PackageReference Include="MySqlConnector" Version="1.3.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SpiderCoreV2\SpiderCoreV2.csproj" />
+    <ProjectReference Include="..\SpiderDomain\SpiderDomain.csproj" />
   </ItemGroup>
 
 </Project>
