--- a/SpiderSinaTracker/SpiderSinaTracker.csproj
+++ b/SpiderSinaTracker/SpiderSinaTracker.csproj
@@ -282,13 +282,17 @@
     </COMReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SpiderCore\SpiderCore.csproj">
-      <Project>{B5FFD47D-5A28-45CA-A2BA-287DCF2912C8}</Project>
-      <Name>SpiderCore</Name>
+    <ProjectReference Include="..\SpiderCoreV2\SpiderCoreV2.csproj">
+      <Project>{c70f1ac9-9845-40c0-940f-7b60e70747e3}</Project>
+      <Name>SpiderCoreV2</Name>
     </ProjectReference>
     <ProjectReference Include="..\SpiderDomain\SpiderDomain.csproj">
       <Project>{cb808102-c8a3-43de-88b2-fdc69ca74e62}</Project>
       <Name>SpiderDomain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SpiderService\SpiderService.csproj">
+      <Project>{dc70dad3-07bc-47ca-b614-0f0784f080b6}</Project>
+      <Name>SpiderService</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
